# ros2_object_detection

./: .gitignore  CMakeLists.txt  package.xml  readme.md
config/: object_detection_node.yaml  pgie_yolov11_config.txt
config/inference/: pgie_config.txt  pgie_yolov11_config.txt
config/pipelines/: default_pipeline.yaml  ip_cam_pipeline.yaml  test_pipeline.yaml  usb_cam_pipeline.yaml
config/tracking/: tracker_config.txt  tracker_config.yaml
include/ros2_object_detection/: constants.hpp  kalman_filter_2d.hpp  object_detection.hpp  osd_renderer.hpp  target_logic.hpp
launch/: detector.launch.py
scripts/: generate_yolov11.py
src/: kalman_filter_2d.cpp  object_detection.cpp  osd_renderer.cpp  target_logic.cpp
